# lfg

./: .gitignore  Cargo.toml  GITHUB_INTEGRATION.md  README.md  build.sh  go.mod  go.sum  install.sh  lfg-config.example.yaml  main.go
.github/workflows/: ci.yml  test.yml
internal/agent/: agent.go  agent_test.go
internal/config/: config.go  config_test.go  init.go
internal/git/: git.go  git_test.go
internal/github/: github.go  github_test.go
internal/tmux/: tmux.go  tmux_test.go
internal/tui/: tui.go
internal/viewer/: viewer.go
src/: cli.rs  config.rs  git.rs  github.rs  init.rs  lib.rs  main.rs  tmux.rs  tui.rs
tests/: integration_tests.rs
